  * Added onStart - This event is the better "onLoop". This event will be executed, when SMBX is running the first frame.
  * Fixed music.ini bug which wasn't supported track number suffix for NSF/HES/etc. multi-track musics
  * NPCs can now be killed, even if they are hidden.
  * Add width/height properties to LuaImageResource.
  
v0.7.2.2 BETA:
  * Extended NPC class
  * Bugfix [LunaLua]: Fixed Camera.width and Camera.height
  * Bugfix [LunaLua]: Fixed the bug, where the functions Blocks.get and Blocks.getInterseting don't includes the last block.
  * Added onNPCKill event
  * Block can now be spawned with Block.spawn(...)

v0.7.2.1 BETA:
  * Extended NPC class
  * Added cheat values. Some cheat can now be toggled by value. (Defines.* namespace)
  * Added Audio.MusicArtistTag(), Audio.MusicAlbumTag() and Audio.MusicCopyrightTag() functions
  * Added console class. You can now use the windows console for debugging. (See LunaLua command arguments at the wiki)
  * Hotfix Bugfix [LunaLua]: Fixed ROP exploit at the Autocode module.

v0.7.2 BETA:
  * Extended Level class and World class (Overworld)
  * Extended Player class
  * Extended Section Class
  * Extended Graphics Namespace
  * Extended Block class
  * Extended NPC class
  * Added Section Namespace (Static functions for Section class)
  * Added some new Defines (Defines.* namespace)
  * Added switch between letterbox-mode (forced 4:3) or scretched-mode via F4
  * Bugfix [LunaLua and SMBX Engine]: Decimal numbers now work perfectly in layer speed and npc codes (Thanks to DarkMecha for testing!)
  * Bugfix [LunaLua and SMBX Engine]: Fullscreen in the level editor works again!
  * Added printTextWP, drawImageWP, drawImageToSceneWP which enables rendering with priority settings (also known as Z-Index)
  * Added sounds.ini on level-basis


v0.7.1.1 BETA:
  * Added comparing operator for some LunaLua classes.
  * Added PlayerSettings-Class
  * Added PNG support for custom level items (i.e. npc-1.png)